{
  "networkConnection": "Нет подключения к интернету",
  "emptyList": "Здесь пока ничего нет",
  "watchBooksList": "Перейти к просмотру книг",
  "settings": "Настройки",
  "myBooks": "Мои книги",
  "library": "Библиотека",
  "signinout": "Вход / Выход",
  "signin": "Вход",
  "signout": "Выход",
  "languages": "Языки",
  "darkMode": "Темная тема",
  "textSize": "Размер текста",
  "error": "Ошибка",
  "errorOfFile": "Ошибка чтения файла",
  "retry": "Повторить",
  "recieveCode": "Получить код",
  "enterYourNumber": "Введите номер телефона",
  "submit": "Подтвердить",
  "enterCode": "Введите код из SMS",
  "recieveNewCode": "Получить новый код",
  "read": "Читать книгу",
  "title": "Название: ",
  "author": "Автор: ",
  "genre": "Жанр: ",
  "unavailable": "Эта фича в данный момент недоступна",
  "unknown": "Неизвестно",
  "deleteConfirmation": "Вы действительно хотите удалить эту книгу из избранных?",
  "cancel": "Отмена",
  "ok": "ОК",
  "search": "Поиск",
  "downloading": "Загрузка...",
  "deletion": "Удаление книги",
  "enterYourPassword": "Введите ваш пароль",
  "enterYourEmail": "Введите ваш email",
  "wrongCreds": "Неверные данные аутентификации",
  "logout": "Выйти"
}